fix text-wrap bug

--- a/src/styles/descriptionSection.css
+++ b/src/styles/descriptionSection.css
@@ -108,3 +108,7 @@ h3 {
     align-items: center;
     justify-content: center;
 }
+
+#htmlData {
+    white-space: pre;
+}
